--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@ layout: default
                 {% endif %}
             {% endfor %}
          {% else %}
-            {% assign cate = post.title | split:'-' | first %}
-            {% assign thumbnail = site.IMG_PATH | append: '/in-post/' |  append: cate | append: '/thumb.png' %}
+            {% assign thumbnail = site.IMG_PATH | append: '/in-post/cpp/thumb.png' %}
          {% endif %}
     {% endif %}
 
